--- a/package.json
+++ b/package.json
@@ -19,11 +19,17 @@
   "dependencies": {
     "@types/gapi.client.sheets": "^4.0.1",
     "googleapis": "^43.0.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "webpack": "^4.40.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "webpack-cli": "^3.3.9"
   }
 }
