--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
     "webpack-cli": "^3.3.9"
   }
 }
